--- a/src/Component/AddPayment/AddPayment.css
+++ b/src/Component/AddPayment/AddPayment.css
@@ -43,12 +43,12 @@
   font-size: 12px;
 }
 
-.text-warning {
-  /* font-size: 12px;
-	font-weight: 500; */
+/* .text-warning {
+  font-size: 12px;
+	font-weight: 500;
   color: #edb537 !important;
   text-align: start;
-}
+} */
 
 input {
   border-bottom: 1.5px solid #e8e5d2 !important;
@@ -64,9 +64,11 @@ input {
   padding-left: 90px;
 }
 .btn {
-  background: #f3a002 !important;
-  border: none;
-  border-radius: 30px;
+  /* background: #427D8F !important; */
+  /* background: #f3a002 !important; */
+  /* border: none; */
+  /* border-radius: 30px; */
+  /* width: 100%; */
 }
 .btn:focus {
   box-shadow: none;
