--- a/src/Component/TopUP/Table.css
+++ b/src/Component/TopUP/Table.css
@@ -1,3 +1,11 @@
 table, th, td{
-    border: 2px solid black;
+    border: 1px solid black;
+
+}
+.tableComponent{
+    width: 65%;
+    
+}
+.logo{
+    height: 200px;
 }
